--- a/mockup_app/src/main/AndroidManifest.xml
+++ b/mockup_app/src/main/AndroidManifest.xml
@@ -4,17 +4,35 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/logo96"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.AppCompat.Light" >
+
+        <!-- splash screen -->
         <activity
-            android:name="com.mockup.mockup_app.MainActivity"
-            android:label="@string/app_name" >
+            android:name="com.mockup.mockup_app.SplashScreen"
+            android:label="@string/title_activity_splash_screen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <!-- main -->
+        <activity
+            android:name="com.mockup.mockup_app.MainActivity"
+            android:label="@string/app_name" >
+        </activity>
+
+        <!-- Settings - ConfigView -->
+        <activity
+            android:name="com.mockup.mockup_app.ConfigActivity"
+            android:label="@string/title_activity_config" >
+        </activity>
+        <activity
+            android:name="com.mockup.mockup_app.StatsActivity"
+            android:label="@string/title_activity_stats" >
         </activity>
     </application>
 
