Implementation of swipes. Recognizing buttons\object\system logic in view is still in progress.

--- a/mockup_app/src/main/AndroidManifest.xml
+++ b/mockup_app/src/main/AndroidManifest.xml
@@ -30,10 +30,13 @@
             android:name="com.mockup.mockup_app.ConfigActivity"
             android:label="@string/title_activity_config" >
         </activity>
+
+        <!--stats activity-->
         <activity
             android:name="com.mockup.mockup_app.StatsActivity"
             android:label="@string/title_activity_stats" >
         </activity>
+
     </application>
 
 </manifest>
